--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Stefano",
+            "name": "Stefano Anedda",
             "role": "Developer"
         }
     ],
