--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,11 @@
     "authors": [
         {
             "name": "Stefano Anedda",
-            "role": "Developer"
+          "email": "dearste@gmail.com"
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+      "php": ">=7.0"
     },
     "require-dev": {
         "meriel/framework": "dev-master"
